--- a/c/index.html
+++ b/c/index.html
@@ -22,7 +22,7 @@
         <td>n</td>
         <td>Number of moles</td>
         <td>mol</td>
-        <td><a href="#sec:c-mole">See section</a></td>
+        <td><a href="#sec-c-mole">See section</a></td>
     </tr>
     <tr>
         <td>m</td>
@@ -56,8 +56,8 @@
     </tr>
 </table></p>
 
-<p><h3>Formulas</h3>
-In this section, each name will followed by a reference to the equation (or the section) that explains the formula. There are no units included for the sake of memorization but you should always keep the unit in the back of your head, or better yet, remember the conversion factor procedure.</p>
+<h3>Formulas</h3>
+<p>In this section, each name will followed by a reference to the equation (or the section) that explains the formula. There are no units included for the sake of memorization but you should always keep the unit in the back of your head, or better yet, remember the conversion factor procedure.</p>
 
 <p><b>Number of moles</b> when given mass and molar mass (<a href="#eq-c-mol"></a>):
 \begin{equation} n = \frac{m}{M} \end{equation}</p>
@@ -70,11 +70,11 @@ In this section, each name will followed by a reference to the equation (or the 
     A\% = \frac{m_A}{m_{AB}}\times100\%
 \end{equation}</p>
 
-<p><h2>Stoichiometry</h2>
-Stoichiometry simply means that we are dealing with chemical reactions and the quantitative data from such reactions (like weight, volume, number of atoms, etc...).</p>
+<h2>Stoichiometry</h2>
+<p>Stoichiometry simply means that we are dealing with chemical reactions and the quantitative data from such reactions (like weight, volume, number of atoms, etc...).</p>
 
-<p><h3 id="sec-c-mole">The mole — the central number of chemistry</h3>
-How many items are there in a triplet? $3$. How much is a dozen? $12$. Now we have a new definition:
+<h3 id="sec-c-mole">The mole — the central number of chemistry</h3>
+<p>How many items are there in a triplet? $3$. How much is a dozen? $12$. Now we have a new definition:
 \begin{equation}
     \text{A mole} = 6.02\times10^{23}
 \end{equation}
@@ -103,8 +103,8 @@ Similar to how half a dozen is $0.5\times12=6$, you can tell other scientists th
 
 <p><b>The relationship between a mole and the chemical formula</b> is in the proportion. For example, the element dihydrogen monoxide<note>Normal people usually called it "water"</note> has the formula H₂O, which states that for every oxygen atom, there are two hydrogen atoms. If you now have a mole of oxygen, you need to double that amount to have two moles of hydrogen in your compound.</p>
 
-<p><h3 id="sec-c-composition">Composition analysis</h3>
-Before calculating anything, it is usually appropriate to know the chemicals you are using. The first thing to realize is that not all atoms are similar in weight; consider a composition of H₂ and O, the O will make up most of the mass in a molecule — this happened because one O elements weight $16$u while a hydrogen atom weights at about $1$u.</p>
+<h3 id="sec-c-composition">Composition analysis</h3>
+<p>Before calculating anything, it is usually appropriate to know the chemicals you are using. The first thing to realize is that not all atoms are similar in weight; consider a composition of H₂ and O, the O will make up most of the mass in a molecule — this happened because one O elements weight $16$u while a hydrogen atom weights at about $1$u.</p>
 
 <p>An example to determine the <b>percentage composition</b> or how much each element takes up the total mass in a water molecule: first calculate how much each element weights in the entire compound:
 \[
@@ -150,21 +150,21 @@ Because of the estimations in our equation, it is appropriate to assume that it 
     = m_A : m_B
 \end{equation}</p>
 
-<p><h3>Chemical equations</h3>
-A chemical equation usually indicates the proportion of the chemicals that participate in a reaction, essentially showing the mole of particles you need.</p>
+<h3>Chemical equations</h3>
+<p>A chemical equation usually indicates the proportion of the chemicals that participate in a reaction, essentially showing the mole of particles you need.</p>
 
-<p><h2>Electron Configuration</h2>
+<h2>Electron Configuration</h2>
 <h3>Introduction: The modern model of atoms</h3>
-This section is for a simplified explanation of what is going on. It is not required if you are in a hurry but is highly recommended to grasp the deeper understanding of the explanations in the latter sections.</p>
+<p>This section is for a simplified explanation of what is going on. It is not required if you are in a hurry but is highly recommended to grasp the deeper understanding of the explanations in the latter sections.</p>
 
-<p>Most of us are used to the fact that an electron flies around the nucleus in a fixed orbit. This is unfortunately an oversimplification of what happened but for a good reason. Throughout this chapter's model, an electron can move freely around a region rather than flying in a predetermined orbit. Every time you "observe" an electron, you take a picture of it which shows its position in space. As you take more pictures, you will eventually see where it is most likely to appear, and that is how you establish the orbit<note>In this case, we still call it an "orbit" but understand that it is a "region" in space where the electron has 90% chance of appearing in it. ooooooooooooooooooooooooooooo oooooooooooooooooooooooo</note> of the electron.</p>
+<p>Most of us are used to the fact that an electron flies around the nucleus in a fixed orbit. This is unfortunately an oversimplification of what happened but for a good reason. Throughout this chapter's model, an electron can move freely around a region rather than flying in a predetermined orbit. Every time you "observe" an electron, you take a picture of it which shows its position in space. As you take more pictures, you will eventually see where it is most likely to appear, and that is how you establish the orbit<note>In this case, we still call it an "orbit" but understand that it is a "region" in space where the electron has 90% chance of appearing in it.</note> of the electron.</p>
 
 <p>The first four atomic orbital shapes that you will see are s, p, d, and f. For larger atoms, there will be more electrons which require more space to be in, which will create more diverse region's shape (likewise, the outer shell in the classic atom model has more electrons than the inner shell). Each atomic orbital can store up to 2 electrons and will be filled from the smallest orbital to the biggest orbital (which will be called a "shell"). Lastly, the electrons are shy and they would love to occupy an orbital to themselves if possible using Hund's rule.</p>
 
 <p>Of course, what is being said is still a simplification but it is enough for you to grasp the idea of what we are doing in this chapter. Particularly, the given model does not address the wave-particle duality of quantum mechanics nor the complexity of electron orbit; for your information, all of that is stepping on the line between physics and chemistry. Now, this section is the general analogy for you to understand but the latter sections will have a more academic approach to the topic for you to take tests.</p>
 
-<p><h3>Quantum numbers</h3>
-There are three unique quantum numbers to describe an atomic orbital; this can be extended to describe an electron using the orbital it is in and its spin (the fourth quantum number). <b>The Pauli exclusion principle</b> says that each orbital only has 2 electrons with a different spin, which means that the four quantum numbers are essentially the ID of an electron.</p>
+<h3>Quantum numbers</h3>
+<p>There are three unique quantum numbers to describe an atomic orbital; this can be extended to describe an electron using the orbital it is in and its spin (the fourth quantum number). <b>The Pauli exclusion principle</b> says that each orbital only has 2 electrons with a different spin, which means that the four quantum numbers are essentially the ID of an electron.</p>
 
 <p><b>The principal quantum number ($n$)</b> indicates the relative size of the atomic orbital. This is relative to the "shell" of the electron in the classic atom model, so as the number of shells increases, there will be more electrons which leads to more atomic orbital. <i>Most of the time</i>, a higher $n$ means that the orbital has higher energy and the electron will spend more time farther from the nucleus.
 \begin{equation}
@@ -196,8 +196,8 @@ As you can see from the formula, the number of possible $m_l$ (hence the number 
     \right\}
 \end{equation}</p>
 
-<p><h3>Orbital diagram</h3>
-An orbital diagram is used to represent how many electrons are there, and what orbit they are in. Each box here represents an orbit, which can store two electrons drawn by two arrows; if there is only one electron, that electron will have up spin. Figure <a href="#fig-c1"></a> represents how electrons slowly fill from the smallest to the biggest orbit (from 1s to 2s). It is once again important to remember the <b>Pauil's exclusion principle</b> and the fact that the two electrons that share the same orbit should <figure>
+<h3>Orbital diagram</h3>
+<p>An orbital diagram is used to represent how many electrons are there, and what orbit they are in. Each box here represents an orbit, which can store two electrons drawn by two arrows; if there is only one electron, that electron will have up spin. Figure <a href="#fig-c1"></a> represents how electrons slowly fill from the smallest to the biggest orbit (from 1s to 2s). It is once again important to remember the <b>Pauil's exclusion principle</b> and the fact that the two electrons that share the same orbit should <figure>
     <img src="1.png" style="width: 50%;" alt="Orbital diagram and electron configuration of Helium and Lithium">
     <figcaption>Orbital diagram and electron configuration of Helium and Lithium</figcaption>
 </figure></p>
@@ -243,8 +243,8 @@ And just like any principle in chemistry, there are exceptions to the Aufbau pri
     <li>Stop when you already put down enough electrons, check if your element has a special case (usually question-dependent special cases)</li>
 </ul></p>
 
-<p><h3>Electron configuration</h3>
-Taking from figure <a href="fig-c1"></a>, lithium's electron configuration has 3 electrons on two separate subshells — we write the number of electrons per subshell as a superscript after the subshell's notation. If we have $x$ as the number of electrons in a subshell, the general format for a subshell's electron configuration is:
+<h3>Electron configuration</h3>
+<p>Taking from figure <a href="fig-c1"></a>, lithium's electron configuration has 3 electrons on two separate subshells — we write the number of electrons per subshell as a superscript after the subshell's notation. If we have $x$ as the number of electrons in a subshell, the general format for a subshell's electron configuration is:
 \begin{equation}
     n\,l\,^x
 \end{equation}
