--- a/c/index.html
+++ b/c/index.html
@@ -123,7 +123,7 @@ In this stage, we calculate the weight of individual items that make up our comp
 \]
 Despite you need two atoms of hydrogen to build a single molecule, clearly that single hydrogen atom takes up more weight.</p>
 
-<p>The general formula to calculate the <b>percentage composition</b> with the mass of an element $m_A$ and the compound's mass $m_{AB</b>=m_A+m_B$ is:
+<p>The general formula to calculate the <b>percentage composition</b> with the mass of an element $m_A$ and the compound's mass $m_{AB}=m_A+m_B$ is:
 \begin{equation}
     \label{eq-c-percentage-composition}
     \%A = \frac{m_A}{m_{AB}}\times100\%
