Moved introduction to paragraph element

--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
     <!-- <div subject="p"></div> -->
 
     <h1>Problems</h1>
-    Inspired by xkcd's What If, this part is here to show how very real math can solve real or unreal problems — it is here for your entertainment. The author understands that it will make the file a bit heavier with a mostly unused part, but it was here for a reason. Luke had a problem and because he was too lazy to create a different file, Luke decided to write the problem in this file with LaTeX. Then once again because Luke was too lazy, Luke decided that he would make it as a part and write a whole paragraph to justify instead of making a new file and deleting the notes. That is productivity at its peak.
+    <p>Inspired by xkcd's What If, this part is here to show how very real math can solve real or unreal problems — it is here for your entertainment. The author understands that it will make the file a bit heavier with a mostly unused part, but it was here for a reason. Luke had a problem and because he was too lazy to create a different file, Luke decided to write the problem in this file with LaTeX. Then once again because Luke was too lazy, Luke decided that he would make it as a part and write a whole paragraph to justify instead of making a new file and deleting the notes. That is productivity at its peak.</p>
 
-    Read this for your enjoyment and get a break from the academic-filled parts above — enjoy a moment when practicality starts to spank the author.
+    <p>Read this for your enjoyment and get a break from the academic-filled parts above — enjoy a moment when practicality starts to spank the author.</p>
 
 </body>
 <script>
