Moved file to a different folder

--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
         <p>The Note of Science Topics by Luke NK is free and unlicensed. The author simply suggests the astute reader share this with anybody who needs a different perspective to look at the topics. Knowledge is best used when everybody knows it.</p>
 
         <h1>Math</h1>
-        <div subject="m"></div>
+        <!-- <div subject="m"></div> -->
+        <div subject="a"></div>
 
         <h1>Chemistry</h1>
         <!-- <div subject="c"></div> -->
