Cleaned calculus section

--- a/c/index.html
+++ b/c/index.html
@@ -189,7 +189,7 @@ As you can see from the formula, the number of possible $m_l$ (hence the number 
 \end{equation}</p>
 
 <h3>Orbital diagram</h3>
-<p>An orbital diagram is used to represent how many electrons are there, and what orbit they are in. Each box here represents an orbit, which can store two electrons drawn by two arrows; if there is only one electron, that electron will have up spin. Figure <a href="#fig-c1"></a> represents how electrons slowly fill from the smallest to the biggest orbit (from 1s to 2s). It is once again important to remember the <b>Pauil's exclusion principle</b> and the fact that the two electrons that share the same orbit should <figure>
+<p>An orbital diagram is used to represent how many electrons are there, and what orbit they are in. Each box here represents an orbit, which can store two electrons drawn by two arrows; if there is only one electron, that electron will have up spin. <a href="#fig-c1"></a> represents how electrons slowly fill from the smallest to the biggest orbit (from 1s to 2s). It is once again important to remember the <b>Pauil's exclusion principle</b> and the fact that the two electrons that share the same orbit should <figure>
     <img src="1.png" style="width: 50%;" alt="Orbital diagram and electron configuration of Helium and Lithium">
     <figcaption>Orbital diagram and electron configuration of Helium and Lithium</figcaption>
 </figure></p>
