Adjusted figure styling

--- a/c/index.html
+++ b/c/index.html
@@ -189,8 +189,9 @@ As you can see from the formula, the number of possible $m_l$ (hence the number 
 \end{equation}</p>
 
 <h3>Orbital diagram</h3>
-<p>An orbital diagram is used to represent how many electrons are there, and what orbit they are in. Each box here represents an orbit, which can store two electrons drawn by two arrows; if there is only one electron, that electron will have up spin. <a href="#fig-c1"></a> represents how electrons slowly fill from the smallest to the biggest orbit (from 1s to 2s). It is once again important to remember the <b>Pauil's exclusion principle</b> and the fact that the two electrons that share the same orbit should <figure>
-    <img src="1.png" style="width: 50%;" alt="Orbital diagram and electron configuration of Helium and Lithium">
+<p>An orbital diagram is used to represent how many electrons are there, and what orbit they are in. Each box here represents an orbit, which can store two electrons drawn by two arrows; if there is only one electron, that electron will have up spin. <a href="#fig-c1"></a> represents how electrons slowly fill from the smallest to the biggest orbit (from 1s to 2s). It is once again important to remember the <b>Pauil's exclusion principle</b> and the fact that the two electrons that share the same orbit should have a different spin.
+<figure>
+    <img src="1.png" alt="Orbital diagram and electron configuration of Helium and Lithium">
     <figcaption>Orbital diagram and electron configuration of Helium and Lithium</figcaption>
 </figure></p>
 
@@ -201,7 +202,7 @@ We group orbitals from the same subshell by connecting the sides of the orbital 
 </quote>
 In simple terms demonstrated by figure <a href="#fig-c2"></a>, you should fill all the orbitals in the same subshell with electrons of the same spin (<i>in most cases</i>, up spin) before putting in the opposite spin.
 <figure>
-    <img src="2.png" style="width: 50%;" alt="How electrons fill the orbits from the 2p subshell">
+    <img src="2.png" alt="How electrons fill the orbits from the 2p subshell">
     <figcaption>How electrons fill the orbits from the 2p subshell</figcaption>
 </figure></p>
 
@@ -215,7 +216,7 @@ Multiply the result by 2 and you get the number of electrons a subshell can hold
 </quote>
 This principle is here to warn you of the fact that the subshell's energy level is not in order. Yes, the order <i>inside a shell</i> follows the basic order based on $l$; however, an example would be the subshell 4s has a lower energy level compared to the 3d subshell. This is a reminder that $n$ is simply to show you the <i>relative size</i> of the orbit (compared to a similarly shaped orbit) while $l$ is the shape — this is why the terminology "shell" is confusing in this case, as we tend to think they are orderly stacked but in fact, they are not (figure <a href="#fig-c3"></a>). Luckily, there is a trick to remember the energy level, presented in figure <a href="#fig-c4"></a>; the Aufbau principle starts to kick as we reach scandium, the first transition metal in the periodic table.
 <figure>
-    <img src="3.png" style="width: 75%;" alt="Energy diagram for each subshell">
+    <img src="3.png" alt="Energy diagram for each subshell">
     <figcaption>Energy diagram for each subshell, courtesy of BYJUS</figcaption>
 </figure></p>
 
