--- a/m/index.html
+++ b/m/index.html
@@ -204,7 +204,7 @@ The difference does not have commutative property.</p>
 <h3>Functions</h3>
 <p>Functions describe the relationship between input and output — they are like factories with inputs and produce one output (<a href="fig-m19"></a>). If we define $x$ as an input and the function that will manipulate our input as $F$, then the output can be defined as:
 <figure>
-    <img src="19.png" style="width: 50%;" alt="Function as a black box">
+    <img src="19.png" alt="Function as a black box">
     <figcaption>Function as a black box</figcaption>
 </figure>
 \begin{equation}
@@ -280,7 +280,7 @@ Because $b=0$ for real numbers, the conjugate of a real number is itself.</p>
 <h3>Visual intuition</h3>
 <p>
 <figure>
-    <img src="9.png" style="width: 50%;" alt="Complex number intuition">
+    <img src="9.png" alt="Complex number intuition">
     <figcaption>Complex number intuition</figcaption>
 </figure>
 As a way to draw it on a standard two-axis graph similar to <a href="fig-m9"></a>}, you can put the horizontal axis (x-axis) as $a$ and the vertical axis as $b$ to represent the imaginary part of a complex number. This works better if you also recall that we were taught real numbers on a left-right number line.</p>
