--- a/a/index.html
+++ b/a/index.html
@@ -10,14 +10,17 @@
 <p>You may wonder: why I said that the limit is <i>both</i> the upper and the lower bound but my result only gives out one value. This is because the difference between the upper bound and the lower bound is <i>approaching</i> one single number. If you have two butter cubes, both the maximum and the minimum you can spread is 4. Later you will see that is not always true for certain equations.</p>
 
 <p>Another interesting thing is that the limit is essentially what the value of the function <i>is supposed</i> to be. In our case, we evaluate that limit by simply plugging $g(2)=4$. This is the property we got from the definition of limit itself: it is the "restriction" of the y-axis (the output) as the x-axis (the input) gets closer to a value (<a href="#fig-m2"></a>). If x "squeeze" then it will result in $g(x)$ being squeezed to a value. This is why when solving limits, it is about arranging your function to the point where you can plug in the $x$ value to answer your limit.
-<figure style="width: 40%; text-align: center;">
-    <img src="2.png" style="width: 90%;" alt="Representation of lim(x→2)g(x)=4">
-    <figcaption>Representation of $ \lim_{x\to2}g(x)=4 $</figcaption>
-</figure>
-<figure style="width: 40%; text-align: center;">
-    <img src="3.png" style="width: 75%;" alt="A discontinuous function">
-    <figcaption>A discontinuous function</figcaption>
-</figure></p>
+<div class="figure">
+    <figure>
+        <img src="2.png" alt="Representation of lim(x→2)g(x)=4">
+        <figcaption>Representation of $ \lim_{x\to2}g(x)=4 $</figcaption>
+    </figure>
+    <figure>
+        <img src="3.png" alt="A discontinuous function">
+        <figcaption>A discontinuous function</figcaption>
+    </figure>
+</div>
+</p>
 
 <p>The biggest takeaway from this section is: limit is what the output approaches given the input is approaching a number. Moreover, because both the upper bound and the lower bound approach a number, we can think of the limit as a value that the function is supposed to be at a given x-coordinate, even if the function is undefined at that point.</p>
 
@@ -43,16 +46,16 @@ Be careful: the sign denotes where we <i>start</i>. If the sign is negative, we 
 This leads us to the definition of <b>continuity</b>: if the limit of $f(x)$ at $a$ is equal to $f(x)$ then the function is continuous at $a$.</p>
 
 <h3>Unbound limit</h3>
-<p>
-    <figure style="width: 45%; text-align: center;">
-        <img src="1.png" style="width: 90%;" alt="The graph of the function f(x)=1/x^2">
+<div class="figure">
+    <figure>
+        <img src="1.png" alt="The graph of the function f(x)=1/x^2">
         <figcaption>The graph of the function $ f(x)=\frac{1}{x^2} $</figcaption>
     </figure>
-    <figure style="width: 45%; text-align: center;">
-        <img src="4.png" style="width: 90%;" alt="The graph of function f(x)=1/x">
+    <figure>
+        <img src="4.png" alt="The graph of function f(x)=1/x">
         <figcaption>The graph of function $ f(x)=\frac{1}{x} $</figcaption>
     </figure>
-</p>
+</div>
 
 <p>Consider the function $f(x)=1/x^2$ in figure <a href="fig:m1"></a>,  you can see that moving from both sides, the limit slowly becomes higher and higher. It seems like it is <b>unbounded</b> or the limit seems to reach <b>positive infinity</b>.
 \[ \lim_{x\to0} \frac{1}{x^2} = \infty \]</p>
@@ -108,7 +111,7 @@ These theorems can be deducted from the concept that limit is essentially substi
 
 <p>From these theorems, you can see that <b>finding a finite limit</b> is simply doing algebra manipulation of the function until you reach a point where you can substitute $x$ into your equation. The typical procedure to solve a finite limit can be found in figure <a href="#fig-m5"></a>.
 <figure>
-    <img src="5.png" style="width: 75%;" alt="Procedure to calculate limit, courtesy of Khan Academy.">
+    <img src="5.png" alt="Procedure to calculate limit, courtesy of Khan Academy.">
     <figcaption>Procedure to calculate limit, courtesy of Khan Academy.</figcaption>
 </figure></p>
 
@@ -196,7 +199,7 @@ After that, you need to check if the function $g(x)$ for $x$ approaches $a$ is l
 
 <p>Here are <b>Pythagorean identities</b>, which help when reviewing with a unit circle that displays trigonometric functions like figure <a href="fig-m8"></a>:
 <figure>
-    <img src="8.png" style="width: 75%;" alt="A unit circle with trigonometric functions">
+    <img src="8.png" alt="A unit circle with trigonometric functions">
     <figcaption>A unit circle with trigonometric functions</figcaption>
 </figure>
 \begin{equation}
@@ -264,14 +267,16 @@ Read: If we certainly know that, inside the range we are evaluating, $h(x)$ is a
 
 <p>For example, we have the following function with the graph from figure <a href="fig-m7"></a> and <a href="fig-m6"></a>:
 \[ x^2 \sin\left( \frac{1}{x} \right) \]
-<figure style="width: 40%; text-align: center;">
-    <img src="7.png" style="width: 75%;" alt="The graph of x^2 sin(1/x) and ±x^2">
-    <figcaption>The graph of $ x^2\sin{\frac{1}{x}} $ and $ \pm x^2 $</figcaption>
-</figure>
-<figure style="width: 40%; text-align: center;">
-    <img src="6.png" style="width: 100%;" alt="The graph zoomed in">
-    <figcaption>The graph zoomed in</figcaption>
-</figure></p>
+<div class="figure">
+    <figure>
+        <img src="7.png" alt="The graph of x^2 sin(1/x) and ±x^2">
+        <figcaption>The graph of $ x^2\sin{\frac{1}{x}} $ and $ \pm x^2 $</figcaption>
+    </figure>
+    <figure>
+        <img src="6.png" alt="The graph zoomed in">
+        <figcaption>The graph zoomed in</figcaption>
+    </figure>
+</div></p>
 
 <p>Of course, we can observe from the graph that the function approaches $0$ as $x\to0$, but what if we don't have the graph? We know from the property of a sine graph that the coefficient at the front will determine the height of the graph. Therefore, we know that:
 \[
@@ -363,7 +368,7 @@ In the last step, we know that $e^x$ grows much more rapidly than $2$.</p>
         {\Delta x}
 \end{equation}
 <figure>
-    <img src="10.png" style="width: 50%;" alt="Two points approaching each other, courtesy of Math is Fun">
+    <img src="10.png" alt="Two points approaching each other, courtesy of Math is Fun">
     <figcaption>Two points approaching each other, courtesy of Math is Fun</figcaption>
 </figure></p>
 
@@ -444,7 +449,7 @@ This means the limit of a quotient of two functions equals the limit of the quot
 <p>% Maybe someday change f(x) to y and df to dy. I won't change it right now because that means redrawing figure m11.
 Assume we have two functions: $g(x)$ and $h(x)$, and $f(x)=h\cdot g$. Because it is the multiplication between two functions, you can think of $f(x)$ as the area of a rectangle with $h(x)$ and $g(x)$ as two sides, similar to figure <a href="fig-m11"></a>.
 <figure>
-    <img src="11.png" style="width: 50%;" alt="Representation of a product between two functions">
+    <img src="11.png" alt="Representation of a product between two functions">
     <figcaption>Representation of a product between two functions</figcaption>
 </figure>
 </p>
@@ -475,7 +480,7 @@ Because $dx\to0$, we can eliminate that term:
 
 <p>Assume we have $g(h(x))$. We can imagine these two functions like a production line: we put in the raw number $x$, and then the function $h$ will "process" the input before passing it to $g$, after which the output will then be given. This production chain can be visualized in figure <a href="fig:m12"></a>. Note that now we denote a tiny change in our input as $dx$, a tiny change in our output as $dy$, and our ultimate goal is to find the ratio $dy/dx$.
 <figure>
-    <img src="12.png" style="width: 50%;" alt="Chain rule visualization">
+    <img src="12.png" alt="Chain rule visualization">
     <figcaption>Chain rule visualization</figcaption>
 </figure></p>
 
@@ -544,14 +549,16 @@ If you think of  $dg/dh$ as "derivative of $g$ when plugging in $h$", another in
 
 <h4>The main function is zero-degree (constant)</h4>
 <p>If we have $f(x)=c$, the graph of our constructed function will look like figure <a href="fig:m13"></a>. If we were to find the area between $0$ and $a$, we could simply calculate $A(a)$ to get the result.
-<figure style="width: 40%; text-align: center;">
-    <img src="13.png" style="width: 90%;" alt="A representation of a constant function's integral">
-    <figcaption>A representation of a constant function's integral</figcaption>
-</figure>
-<figure style="width: 40%; text-align: center;">
-    <img src="14.png" style="width: 90%;" alt="A representation of a linear function's integral">
-    <figcaption>A representation of a linear function's integral</figcaption>
-</figure></p>
+<div class="figure">
+    <figure>
+        <img src="13.png" alt="A representation of a constant function's integral">
+        <figcaption>A representation of a constant function's integral</figcaption>
+    </figure>
+    <figure>
+        <img src="14.png" alt="A representation of a linear function's integral">
+        <figcaption>A representation of a linear function's integral</figcaption>
+    </figure>
+</div></p>
 
 <p>If we move $a$ a $dx$ amount to the right and want to find the area at that point, we plug $A(a+dx)$. If you look at the red rectangle on the figure, there are two ways to interpret that area:
 <ul>
@@ -661,7 +668,7 @@ Or, if we assume that capital $V=\int v\;dx$, we have:
 \end{equation}
 You can take a look at figure <a href="fig-m15"></a> for a visualization of the rule.
 <figure>
-    <img src="15.png" style="width: 50%;" alt="Integration by parts diagram, courtesy of Math is Fun">
+    <img src="15.png" alt="Integration by parts diagram, courtesy of Math is Fun">
     <figcaption>Integration by parts diagram, courtesy of Math is Fun</figcaption>
 </figure></p>
 
@@ -678,7 +685,7 @@ We can use $u$ as an input placeholder and compute our integral as:
 \end{equation}
 After that, solve the integral normally (remember the variable is now a placeholder $u$) before substituting $g(x)$ back into the equation. Use figure <a href="fig:m17"></a> to assist you when setting up the equation.
 <figure>
-    <img src="17.png" style="width: 40%;" alt="Integration by substituting, courtesy of Math is Fun">
+    <img src="17.png" alt="Integration by substituting, courtesy of Math is Fun">
     <figcaption>Integration by substituting, courtesy of Math is Fun</figcaption>
 </figure></p>
 
@@ -763,7 +770,7 @@ We identify $u=x^3$ and $v=\sin x$. Next, we set up the table <a href="tab-m3"><
     =& -x^3\cos x + 3x^2\sin x + 6x\cos x - 6\sin x
 \end{aligned}\]
 <figure>
-    <img src="16.png" style="width: 40%;" alt="Integration by part using the tabular method">
+    <img src="16.png" alt="Integration by part using the tabular method">
     <figcaption>Integration by part using the tabular method</figcaption>
 </figure></p>
 
@@ -861,7 +868,7 @@ If you continue to expand the power rule, we will have an integral for <b>linear
 
 </ul>
 <figure>
-    <img id="abc" src="18.png" style="width: 100%;" alt="Solving integrals flowchart, courtesy of a deleted Reddit user on r/math">
+    <img id="abc" src="18.png" alt="Solving integrals flowchart, courtesy of a deleted Reddit user on r/math">
     <figcaption>Solving integrals flowchart, courtesy of a deleted Reddit user on r/math</figcaption>
 </figure>
 </p>
