Physics repatriated Physics was the first to put down on Latex n-week-project, it is now the last to leave the Latex n-week-project

--- a/index.html
+++ b/index.html
@@ -124,14 +124,14 @@
         <p>The Note of Science Topics by Luke NK is free and unlicensed. The author simply suggests the astute reader share this with anybody who needs a different perspective to look at the topics. Knowledge is best used when everybody knows it.</p>
 
         <h1>Math</h1>
-        <div subject="m"></div>
-        <div subject="a"></div>
+        <!-- <div subject="m"></div>
+        <div subject="a"></div> -->
 
         <h1>Chemistry</h1>
-        <div subject="c"></div>
+        <!-- <div subject="c"></div> -->
 
         <h1>Physics</h1>
-        <!-- <div subject="p"></div> -->
+        <div subject="p"></div>
 
         <h1>Problems</h1>
         <p>Inspired by xkcd's What If, this part is here to show how very real math can solve real or unreal problems — it is here for your entertainment. The author understands that it will make the file a bit heavier with a mostly unused part, but it was here for a reason. Luke had a problem and because he was too lazy to create a different file, Luke decided to write the problem in this file with LaTeX. Then once again because Luke was too lazy, Luke decided that he would make it as a part and write a whole paragraph to justify instead of making a new file and deleting the notes. That is productivity at its peak.</p>
