--- a/a/index.html
+++ b/a/index.html
@@ -861,9 +861,9 @@ If you continue to expand the power rule, we will have an integral for <b>linear
 
 <h3 id="sec-m-integral-material">Additional material</h3>
 <p><ul>
-    <li>A YouTube playlist by 3Blue1Brown to help with the visualization of constructing derivatives (as well as other calculus concepts): \href{https://www.youtube.com/playlist?list=PL0-GT3co4r2wlh6UHTUeQsrf3mlS2lk6x}{Essence of calculus}</li>
-    <li>An in-depth look into the proof and connection between derivatives and integrals: \url{https://en.wikipedia.org/wiki/Fundamental_theorem_of_calculus}</li>
-    <li>The tabular method explanation video: \url{https://www.youtube.com/watch?v=Yyic5aaXGaw}</li>
+    <li>A YouTube playlist by 3Blue1Brown to help with the visualization of constructing derivatives (as well as other calculus concepts): <a href="https://www.youtube.com/playlist?list=PL0-GT3co4r2wlh6UHTUeQsrf3mlS2lk6x">Essence of calculus</a></li>
+    <li>An in-depth look into the proof and connection between derivatives and integrals: <a href="https://en.wikipedia.org/wiki/Fundamental_theorem_of_calculus">https://en.wikipedia.org/wiki/Fundamental_theorem_of_calculus</a></li>
+    <li>The tabular method explanation video: <a href="https://www.youtube.com/watch?v=Yyic5aaXGaw">https://www.youtube.com/watch?v=Yyic5aaXGaw</a></li>
     <li>A strongly worded flowchart to solve integrals can be found in figure <a href="fig:m18"></a></li>
 
 </ul>
