--- a/c/index.html
+++ b/c/index.html
@@ -80,14 +80,14 @@ Similar to how half a dozen is $0.5\times12=6$, you can tell other scientists th
 <p><b>Molar mass</b> is the mass of $1$ mole of an element while the <b>formula mass</b> of a compound is the sum of all atoms in that compound. They are both similar in value but different in the unit: molar mass's unit is usually in grams per mole while formula mass is in the atomic unit, which is $1/12$ the weight of a carbon atom (or about $1$ hydrogen atom). The atomic unit will be abbreviated as "u" throughout this note.</p>
 
 <p><b>To calculate the number of moles</b>, you can see how many times the molar mass you have of the element A:
+<span class="label" id="eq-c-mol"></span>
 \begin{equation}
-    \label{eq-c-mol}
     n = \frac{m\text{ g}}{M\text{ g/mol}}
 \end{equation}</p>
 
 <p>$1$ mole of any gas at <b>standard temperature and pressure</b> or <b>STP</b> occupies exactly $22.4$ litres. That property only appears for gasses but not liquids or solids. If you want to calculate <b>the number of moles in a volume of gas</b>:
+<span class="label" id="eq-c-mol-in-gas"></span>
 \begin{equation}
-    \label{eq-c-mol-in-gas}
     n = V\text{ L} \times \frac{1\text{mol}}{22.4\text{L}}
 \end{equation}</p>
 
@@ -116,8 +116,8 @@ In this stage, we calculate the weight of individual items that make up our comp
 Despite you need two atoms of hydrogen to build a single molecule, clearly that single hydrogen atom takes up more weight.</p>
 
 <p>The general formula to calculate the <b>percentage composition</b> with the mass of an element $m_A$ and the compound's mass $m_{AB}=m_A+m_B$ is:
+<span class="label" id="eq-c-percentage-composition"></span>
 \begin{equation}
-    \label{eq-c-percentage-composition}
     \%A = \frac{m_A}{m_{AB}}\times100\%
 \end{equation}</p>
 
