--- a/p/index.html
+++ b/p/index.html
@@ -296,7 +296,7 @@ An intuition to read this is to think that each row in the vector corresponds to
     \end{pmatrix}
 \]</p>
 
-<p>Now recall that qubits are simply the basis vectors multiplied by a certain amplitude. The amplitude we will put into our equation here essentially alters the chance a certain combination ("00" for example) will appear. Let's consider a state $|\psi_{AB}\rangle$ that is an equal superposition of all the standard basis vectors from equation (\ref{eq:p1}):
+<p>Now recall that qubits are simply the basis vectors multiplied by a certain amplitude. The amplitude we will put into our equation here essentially alters the chance a certain combination ("00" for example) will appear. Let's consider a state $|\psi_{AB}\rangle$ that is an equal superposition of all the standard basis vectors from equation (<a href="eq-p1"></a>):
 \[\begin{aligned}
     |\psi_{AB}\rangle
     &= \frac{1}{2}|00\rangle + \frac{1}{2}|01\rangle + \frac{1}{2}|10\rangle + \frac{1}{2}|11\rangle \\
@@ -469,7 +469,7 @@ This DOES NOT violate the non-commutative property, since the order is still pre
  In other words, the order in which you apply the tensor product operator matters.</p>
 
 <h3>Quantum entanglement</h3>
-<p>If we further break down the tensor product equation according to equation (\ref{eq:p2}), we will have a representation of multiple qubits using classical bits:
+<p>If we further break down the tensor product equation according to equation (<a href="eq-p2"></a>), we will have a representation of multiple qubits using classical bits:
 \begin{equation}
     \label{eq:p3}
     (\alpha_A|0\rangle + \beta_A|1\rangle) \otimes
@@ -489,7 +489,7 @@ As you can see, the equation above implies the fact that these two qubits are wo
     |1\rangle_A \otimes |1\rangle_B
     = \begin{pmatrix} 1 \\ 0 \\ 0 \\ 1 \end{pmatrix}
 \end{equation}
-This equation describes a relationship where if $|\psi\rangle_A$ is 0, then we know that  $|\psi\rangle_B$ must be 0 — it is special in the fact that we cannot describe it using the independent state equation (\ref{eq:p3}). The matrix here describes the fact that there is <i>no possibility</i> that these two qubits are different, so knowing one is enough to know the state of the other qubit.</p>
+This equation describes a relationship where if $|\psi\rangle_A$ is 0, then we know that  $|\psi\rangle_B$ must be 0 — it is special in the fact that we cannot describe it using the independent state equation (<a href="eq-p3"></a>). The matrix here describes the fact that there is <i>no possibility</i> that these two qubits are different, so knowing one is enough to know the state of the other qubit.</p>
 
 <p>How can we make such entanglement happen? That is the question for the engineers to manufacture the particles — entanglement is possible from our theory and it is their job to figure out how. That is why sometimes it is best to think of quantum entanglement as a mathematical concept rather than a practical connection. We know that it is possible to produce in real life because there is nothing <i>theoretically</i> stopping us from doing that. It is like having a $1+1=2$ equation to tell you that you can add things in real life but the practical interpretation is up to you.</p>
 
