--- a/index.html
+++ b/index.html
@@ -177,6 +177,8 @@ function subjectLoad() {
 }
 
 window.onload = () => {
+    // create a time out to scroll to the hash after the page is loaded
+    // cir
     setTimeout(
         () =>
             document.getElementById(window.location.hash.slice(1))
